docs: Change time style

--- a/style.css
+++ b/style.css
@@ -86,6 +86,12 @@ article strong::after {
     background: url(./images/box.png) no-repeat;
     border: none;
     margin-top: 4px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    text-align: center;
+    color: #FFFFFF;
 }
 
 .time p {
