--- a/style.css
+++ b/style.css
@@ -94,6 +94,14 @@ article strong::after {
     color: #FFFFFF;
 }
 
+.hrs, .min {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    color: #8198D0;;
+}
+
 .time p {
     font-style: normal;
     font-weight: 700;
